--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A command line application to build a webpage with summaries of current team members.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
